--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-helmet": "^6.1.0",
     "sass": "^1.32.6"
   }
 }
