footer email signup
using mailchimp

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.0-beta1",
+    "form-serialize": "^0.7.2",
+    "jsonp": "^0.2.1",
     "next": "10.0.6",
+    "query-string": "^6.14.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
