--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "form-serialize": "^0.7.2",
     "jsonp": "^0.2.1",
     "next": "10.0.6",
+    "next-seo": "^4.19.0",
     "query-string": "^6.14.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
