--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.0-beta1",
+    "clsx": "^1.1.1",
     "form-serialize": "^0.7.2",
     "jsonp": "^0.2.1",
-    "next": "10.0.6",
+    "next": "latest",
     "next-seo": "^4.19.0",
     "query-string": "^6.14.0",
     "react": "17.0.1",
