--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "clsx": "^1.1.1",
     "form-serialize": "^0.7.2",
     "jsonp": "^0.2.1",
-    "next": "latest",
+    "next": "^13.0.0",
     "next-seo": "^4.19.0",
     "query-string": "^6.14.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "sass": "^1.32.6"
+  },
+  "devDependencies": {
+    "eslint-config-next": "^13.0.0"
   }
 }
